--- a/.github/workflows/uptime6.yml
+++ b/.github/workflows/uptime6.yml
@@ -14,7 +14,7 @@
 # * More by Anand Chowdhary: https://anandchowdhary.com
 
 
-name: Uptime CI
+name: Uptime CI every 6 minutes
 on:
   schedule:
     - cron: "*/6 * * * *"
