--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -20,6 +20,7 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.underthere.xyz
+  favicon: https://art.pixilart.com/d4da25035ed0d2b.png
   assignees: # Users to assign downtime issues (optional)
   - ChrisMoriarty
   # baseUrl: /your-repo-name
