--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -28,8 +28,8 @@ sites:
   - name: Paperless
     url: https://paperless.underthere.xyz
     maxResponseTime: 3000
-  - name: Audiobookshelf
-    url: https://audiobookshelf.underthere.xyz
+  - name: Emby
+    url: https://emby.underthere.xyz
     maxResponseTime: 3000
 
 status-website:
